--- a/index.html
+++ b/index.html
@@ -138,9 +138,6 @@
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
   <a style="font-size:15px; color:white">VISOR DE PARCELAS CON CULTIVOS Y CONSTRUCCIONES DE LA EEA INTA MENDOZA</a>
   <img src="image/INTA.png" width="50" height="50"></img>
-  <!-- Volver a la página anterior -->
-  <!--<a href="javascript: history.go(-1)">Volver atrás</a>
-  <input type="button" value="Página anterior" onClick="history.go(-1);">-->
 </header>
 
 <!--Barra lateral con su formato y elementos-->
@@ -148,7 +145,7 @@
 	<div class="row">
 		<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
 			<div id="barrabotones" class="position-sticky pt-3 sidebar-sticky"">
-				<a id="seguimientogps" style="font-size:12px; color:blue" href="javascript:activar_seguimiento()"><img src="image/posicion.png" width="20" height="20">==> Activar Ubicación</a>
+				<a id="seguimientogps" style="font-size:12px; color:blue" href="javascript:activar_seguimiento()"><img src="image/posicion.png" width="20" height="20"></img>==> Activar Ubicación</a>
 				<p></p>
 				<p style="font-size:12px; color:blue">¿Necesitás filtrar por cultivo o construcción?. Seleccionalo desde aquí...</p>
 				<div id="opciones_cob" style="font-size:12px">
