--- a/index.html
+++ b/index.html
@@ -137,7 +137,14 @@
 <!--Barra con el título y logo-->
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
   <a style="font-size:15px; color:white">VISOR DE PARCELAS CON CULTIVOS Y CONSTRUCCIONES DE LA EEA INTA MENDOZA</a>
-  <img src="image/INTA.png" width="50" height="50"></img>
+  <a style="font-size:11px; color:green">Necesitás ubicar una persona o un lugar?. Buscalo acá...</a>
+  <select id="encontrar_a" style="height:25px; width:100px" onchange="EncontrarA(value)">
+	<option value="" ></option>
+	<option value="Analia" >Analía Diaz Bruno</option>
+	<option value="Claudio" >Claudio Galmarini</option>
+  </select>
+  <div id="ubicacion_texto" style="font-size:10px; text-align:right; background-color:grey; color:blue"><strong>Activar mi ubicación  	 </strong><a id="ubicacion_estado" href="javascript:activar_seguimiento(seguimiento)"><img id="gps" src="image/slide_off.jpg" width="50" height="30"></img></a></div>
+  <img src="image/INTA.png" width="60" height="60"></img>
 </header>
 
 <!--Barra lateral con su formato y elementos-->
@@ -145,7 +152,7 @@
 	<div class="row">
 		<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
 			<div id="barrabotones" class="position-sticky pt-3 sidebar-sticky"">
-				<a id="seguimientogps" style="font-size:12px; color:blue" href="javascript:activar_seguimiento()"><img src="image/posicion.png" width="20" height="20"></img>==> Activar Ubicación</a>
+				<!--<a id="seguimientogps" style="font-size:12px; color:blue" href="javascript:activar_seguimiento()"><img src="image/posicion.png" width="20" height="20"></img>==> Activar Ubicación</a>-->
 				<p></p>
 				<p style="font-size:12px; color:blue">¿Necesitás filtrar por cultivo o construcción?. Seleccionalo desde aquí...</p>
 				<div id="opciones_cob" style="font-size:12px">
@@ -632,6 +639,13 @@ function filtrar_gral(feature) {
 	};
 	};
 
+<!--Función para encontrar una persona o lugar-->
+function EncontrarA(encontrar) {
+	console.log(encontrar);
+	if (encontrar=="Analia") {mapa.flyTo(["-33.0030593","-68.8664403"],20)}
+	else {mapa.flyTo(["-33.00393124722162", "-68.85816558829947"],20)};
+};
+
 <!--Funcion para resetear todo-->
 function resetearTodo() {
 	capa_parcelas.remove();
@@ -726,6 +740,7 @@ function activar_seguimiento() {
 	} else {
 		document.getElementById("seguimientogps").innerHTML="<p style='cursor: pointer; color:#0000ff; font:Arial' onclick='return desactivar_seguimiento()'><img src='image/posicion.png' width='20' height='20'><u>==> Detener Ubicación</u></p>";
 		setInterval(() => {
+		document.getElementById("gps").src="./images/slide_on.jpg";
 		navigator.geolocation.getCurrentPosition(getPosition)
 		}, 2000);
 	};
@@ -737,6 +752,7 @@ function desactivar_seguimiento() {
 	mapa.setView([-33.004058, -68.861730]);
 	mapa.setZoom(16);
 	navigator.geolocation.getCurrentPosition(getPosition);
+	document.getElementById("gps").src="./images/slide_off.jpg";
 	document.getElementById("seguimientogps").innerHTML="<p style='cursor: pointer; color:#0000ff; font:Arial' onclick='return activar_seguimiento()'><u>Activar Ubicacion</u></p>";
 };
 
