--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
   <a style="font-size:15px; color:white">VISOR DE PARCELAS CON CULTIVOS Y CONSTRUCCIONES DE LA EEA INTA MENDOZA</a>
   <a style="font-size:11px; color:green">Necesitás ubicar una persona o un lugar?. Buscalo acá...</a>
-  <select id="encontrar_a" style="height:25px; width:100px" onchange="EncontrarA(value)">
+  <select id="encontrar_a" style="height:25px; width:100px; background-color:green" onchange="EncontrarA(value)">
 	<option value="" ></option>
 	<option value="Analia" >Analía Diaz Bruno</option>
 	<option value="Claudio" >Claudio Galmarini</option>
