--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@ var mapa = L.map('mapa', {editable:true,
 L.control.layers(CapasBase).addTo(mapa);
 
 <!--Crear la herramienta de medición de área-->
-let measurePolygonControl = L.control.measurePolygon();
-measurePolygonControl.addTo(mapa);
+//let measurePolygonControl = L.control.measurePolygon();
+//measurePolygonControl.addTo(mapa);
 
 <!--Añadir el mini-mapa al lienzo-->
 var worldMiniMap = L.control.worldMiniMap({position: 'bottomright', style: {opacity: 0.9, borderRadius: '0px', backgroundColor: 'lightblue'}}).addTo(mapa);
@@ -641,9 +641,8 @@ function filtrar_gral(feature) {
 
 <!--Función para encontrar una persona o lugar-->
 function EncontrarA(encontrar) {
-	console.log(encontrar);
-	if (encontrar=="Analia") {mapa.flyTo(["-33.0030593","-68.8664403"],20)}
-	else {mapa.flyTo(["-33.00393124722162", "-68.85816558829947"],20)};
+	if (encontrar=="Analia") {mapa.flyTo(["-33.0030593","-68.8664403"],18)}
+	else {mapa.flyTo(["-33.00393124722162", "-68.85816558829947"],18)};
 };
 
 <!--Funcion para resetear todo-->
