--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 					<select id="cobertura_vid" onchange="CoberturasAbuscar(value)">
 						<option value="" ></option>
 						<option value="Ancelotta" >Ancelotta (tinta para vino)</option>
-						<option value="Barbera D'asty" >Barbera D'Asty (tinta para vino)</option>
+						<option value="Barbera Dasty" >Barbera D'Asty (tinta para vino)</option>
 						<option value="Cabernet">Cabernet (tinta para vino)</option>
 						<option value="Chardonnay" >Chardonnay (blanca para vino)</option>
 						<option value="Chenin" >Chenin (blanca para vino)</option>
@@ -972,7 +972,7 @@ function CopiarAlPortapapeles1 () {
     let a = document.createElement('a');
     let link = document.createTextNode("This is link");
     a.appendChild(link);
-    a.href = "mailto:cmauriciogodoy@gmail.com?subject=SITIO WEB DEL INTA&body=Estimado Mauricio: Deseo hacerte el siguiente aporte como sugerencia/informe de error del sitio web del INTA. (Explicá con el mayor detalle posible tu comentario).-";
+    a.href = "mailto:cmauriciogodoy@gmail.com?subject=SITIO WEB DEL INTA&body=Estimado Mauricio: Deseo hacerte el siguiente aporte como sugerencia (o informe de error) del sitio web del INTA. ........(Explicá con el mayor detalle posible tu comentario).-";
 	a.id="a";
     document.body.appendChild(a);
 	document.getElementById('a').click();
