--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 		<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
 			<div id="barrabotones" class="position-sticky pt-3 sidebar-sticky"">
 				<p></p>
-				<p style="font-size:12px; color:blue">¿Necesitás filtrar por cultivo o construcción?. Seleccionalo desde aquí...</p>
+				<p style="font-size:12px; color:blue">¿Necesitás filtrar por variedad de vid?. Hacelo desde aquí...</p>
 				<div id="opciones_cob" style="font-size:12px">
 					<select id="cobertura_vid" onchange="CoberturasAbuscar(value)">
 						<option value="" ></option>
@@ -172,33 +172,26 @@
 						<option value="Semillon" >Semillón (blanca para vino)</option>
 						<option value="Syrah" >Syrah (tinta para vino)</option>
 						<option value="Torrontes" >Torrontés (blanca para vino)</option>
-						<option value="Coleccionvino" >Colección de variedades p/vino</option>
+						<option value="Coleccion vinificacion" >Colección de variedades p/vino</option>
+						<option value="Coleccion varietal" >Colección de varietales</option>
+						<option value="Coleccion criollas" >Colección de variedades criollas</option>
 						<option value="Americanas" >Americanas</option>
 						<option value="Portainjertos" >Portainjertos</option>
-						<option value="Coleccionmesa" >Colección de variedades p/mesa</option>
-						<option value="Huerta" >Huerta Orgánica</option>
-						<option value="Hortalizas" >Ensayos hortícolas</option>
-						<option value="Cerezos" >Cerezos</option>
-						<option value="Hidroponia" >Hidroponia</option>
-						<option value="Flores" >Ensayos con flores</option>
-						<option value="Invernaculos" >Invernáculos</option>
-						<option value="Edificios"  >Edificios</option>
-						<option value="Estructuras" >Otras estructuras/construcciones</option>
-						<option value="Inculto" >Parcelas incultas</option>
+						<option value="Variedades de mesa" >Colección de variedades p/mesa</option>
 					</select>
 				</div>
-				<p style="font-size:12px; color:blue"></br>¿Querés hacer la búsqueda con otro criterio?. Seleccionalo desde aquí...</p>
+				<p style="font-size:12px; color:blue"></br>¿Querés hacer la búsqueda con otro criterio?. Hacelo desde aquí...</p>
 				<div id="opciones_otr" style="font-size:12px">
 					<select id="otro_criterio" onchange="CriterioAbuscar(value)">
 						<option value="" ></option>
-						<option value="Cobertura" >Tipo cobertura (cultivos/construc.)</option>
-						<option value="Especie" >Especie de cultivo</option>
+						<option value="Cobertura">Tipo cobertura (cultivos/construc.)</option>
+						<option value="Especie">Especie de cultivo</option>
 						<option value="Conduccion">Conducción del cultivo</option>
-						<option value="Riego" >Tipo de riego</option>
-						<option value="Clon" >Clon plantado</option>
-						<option value="Plantacion" >Año de plantación</option>
-						<option value="Superficie" >Según superficie</option>
-						<option value="Responsable" >Responsable del ensayo</option>
+						<option value="Riego">Tipo de riego</option>
+						<option value="Clon">Clon plantado</option>
+						<option value="Plantacion">Año de plantación</option>
+						<option value="Superficie">Según superficie</option>
+						<option value="Responsable">Responsable del ensayo</option>
 					</select>
 				</div>
 				<div id="cobertura" style="font-size:12px">
@@ -273,7 +266,6 @@
 					<select id="sel_responsable" onchange="BuscarOtro(value)">
 						<option value="" ></option>
 						<option value="Ecofisiologia">Ecofisiología</option>
-						<option value="Monsanto">Monsanto</option>
 						<option value="Claudia Lucero">Claudia Lucero</option>
 						<option value="Gustavo Aliquo">Gustavo Aliquo</option>
 						<option value="Santiago Sari">Santiago Sari</option>
@@ -469,7 +461,7 @@ function onEachFeature(feature, layer) {
 	<!--Establecer el mini-logo del PopUp de acuerdo al cultivo/uso de la parcela-->
 	if (feature.properties.Variedad=="Ancelotta" || feature.properties.Variedad=="Barbera Dasty" || feature.properties.Variedad=="Cabernet" || feature.properties.Variedad=="Malbec" || feature.properties.Variedad=="Merlot" || feature.properties.Variedad=="Pinot" || feature.properties.Variedad=="Syrah" || feature.properties.Variedad=="Cabernet Sauvignon") {logo='./image/Uvas_Tintas.jpg'};
 	if (feature.properties.Variedad=="Chardonnay" || feature.properties.Variedad=="Chenin" || feature.properties.Variedad=="Riesling" || feature.properties.Variedad=="Sauvignon" || feature.properties.Variedad=="Semillon" || feature.properties.Variedad=="Torrontes") {logo='./image/Uvas_Blancas.jpg'};
-	if (feature.properties.Variedad=="Coleccionmesa" || feature.properties.Variedad=="Coleccionvino" || feature.properties.Variedad=="Americanas" || feature.properties.Variedad=="Portainjertos") {logo='./image/Mezcla.jpg'};
+	if (feature.properties.Variedad=="Variedades de mesa" || feature.properties.Variedad=="Coleccion vinificacion" || feature.properties.Variedad=="Coleccion varietal" || feature.properties.Variedad=="Coleccion criollas" || feature.properties.Variedad=="Americanas" || feature.properties.Variedad=="Portainjertos") {logo='./image/Mezcla.jpg'};
 	if (feature.properties.Especie=="Huerta" || feature.properties.Especie=="Hortalizas" ) {logo='./image/Hortalizas.png'};
 	if (feature.properties.Especie=="Cerezo") {logo='./image/Cerezos.jpg'};
 	if (feature.properties.Especie=="Flores") {logo='./image/Flores.jpg'};
@@ -508,7 +500,7 @@ function onEachFeature(feature, layer) {
 		if (feature.properties.Responsabl !=null) {respon=feature.properties.Responsabl};
 		if (feature.properties.Plantacion !=null) {planta=feature.properties.Plantacion};
 		if (feature.properties.Conduccion !=null) {conduc=feature.properties.Conduccion};
-		if (feature.properties.Variedad !=null) {varied="Sin información"};
+		if (feature.properties.Variedad !=null) {varied=feature.properties.Variedad};
 		<!--PopUp a mostrar SI: La parcela tiene un cultivo y no tiene datos de producción-->
 		var contenidoPopup="<b><h4>Especie: "+feature.properties.Especie+"   "+"<img src="+logo+" width='35' height='35' /img>"+"</b></h4><br/>Variedad: "+varied+"<br/>Conducción: "+conduc+"<br/>Año de plantación: "+planta+"<br/>Hileras: "+feature.properties.Hileras+"<br/>Superficie: "+feature.properties.Sup_Croqui+" ha"+"<br/>Responsable: "+respon};
 	if (feature.properties.Cobertura !="Cultivo") {
@@ -546,12 +538,7 @@ function CriterioAbuscar(valor) {
 	encontrar_a.value="";
 	cobertura_vid.value="";
 	capa_parcelas.remove();
-	sup_total=0;
-	tot_parc=0;
-	prom_prod=0;
-	anios_prod=0;
-	if(Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
-	if (lugar !==""){lugar.remove()};
+	criterio=valor;
 	document.getElementById("responsable").style.display="none";
 	document.getElementById("conduccion").style.display="none";
 	document.getElementById("riego").style.display="none";
@@ -560,22 +547,34 @@ function CriterioAbuscar(valor) {
 	document.getElementById("plantacion").style.display="none";
 	document.getElementById("cobertura").style.display="none";
 	document.getElementById("especie").style.display="none";
+	document.getElementById("quitartodo").style.display="none";
+	document.getElementById("mostrartodo").style.display="none";
 	if (otro_criterio.value=="Responsable") {
-		document.getElementById("responsable").style.display="inline"}
+		document.getElementById("responsable").style.display="inline";
+		document.getElementById("sel_responsable").style.display="inline"};
 	if (otro_criterio.value=="Clon") {
-		document.getElementById("clon").style.display="inline"}
+		document.getElementById("clon").style.display="inline";
+		document.getElementById("sel_clon").style.display="inline"};
 	if (otro_criterio.value=="Superficie") {
-		document.getElementById("superficie").style.display="inline"}
+		document.getElementById("superficie").style.display="inline";
+		document.getElementById("sel_superficie").style.display="inline"};
 	if (otro_criterio.value=="Riego") {
-		document.getElementById("riego").style.display="inline"}
+		document.getElementById("riego").style.display="inline";
+		document.getElementById("sel_riego").style.display="inline"};
 	if (otro_criterio.value=="Plantacion") {
-		document.getElementById("plantacion").style.display="inline"}
+		document.getElementById("plantacion").style.display="inline";
+		document.getElementById("sel_plantacion").style.display="inline"};
 	if (otro_criterio.value=="Conduccion") {
-		document.getElementById("conduccion").style.display="inline"}
+		document.getElementById("conduccion").style.display="inline";
+		document.getElementById("sel_conduccion").style.display="inline"};
 	if (otro_criterio.value=="Cobertura") {
-		document.getElementById("cobertura").style.display="inline"}
+		document.getElementById("cobertura").style.display="inline";
+		document.getElementById("sel_cobertura").style.display="inline"};
 	if (otro_criterio.value=="Especie") {
-		document.getElementById("especie").style.display="inline"}
+		document.getElementById("especie").style.display="inline";
+		document.getElementById("sel_especie").style.display="inline"};
+	document.getElementById("quitartodo").style.display="inline";
+	document.getElementById("mostrartodo").style.display="inline";
 	document.getElementById("resumen").style.display="inline";
 	document.getElementById("resumen").innerText=("Datos Estadísticos\nCriterio de filtro: "+valor)};
 
@@ -598,6 +597,8 @@ function CoberturasAbuscar(valor) {
 	document.getElementById("otro_criterio").value="";
 	document.getElementById("resumen").innerText=("Datos Estadísticos\nCobertura Fitlrada: Vid\n Variedad "+valor+"\nCantidad de parcelas: "+tot_parc+"\nSuperficie: "+sup_total.toFixed(2)+" ha"+"\nPromedio producción anual: "+(prom_prod/anios_prod/sup_total).toFixed(2)+" qq/ha");
 	if (Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
+	if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
+	if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
 	if (lugar !==""){lugar.remove()};
 	capa_filtrada=L.geoJSON(parcelas,{filter:Filtrar_Vid, style: PersonalizarPerimetro, onEachFeature}).addTo(mapa);
 	document.getElementById("quitartodo").style.display="inline";
@@ -607,6 +608,13 @@ function CoberturasAbuscar(valor) {
 <!--Funcion para filtrar parcelas con valores distintos a vid-->
 function BuscarOtro(valor) {
 	encontrar_a.value="";
+	sup_total=0;
+	tot_parc=0;
+	prom_prod=0;
+	anios_prod=0;
+	if (Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
+	if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
+	if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
 	capa_filtrada=L.geoJSON(parcelas,{filter:Filtrar_Gral, style: PersonalizarPerimetro, onEachFeature}).addTo(mapa);
 	document.getElementById("resumen").style.display="inline";
 	if (anios_prod !==0) {document.getElementById("resumen").innerText=("Datos Estadísticos\nCriterios de filtro: "+resumen+"\nCantidad de parcelas: "+tot_parc+"\nSuperficie: "+sup_total.toFixed(2)+" ha"+"\nPromedio producción anual: "+(prom_prod/anios_prod/sup_total).toFixed(2)+" qq/ha")};
@@ -618,11 +626,8 @@ function BuscarOtro(valor) {
 
 <!--Funcion para filtrar parcelas con vid-->
 function Filtrar_Vid(feature) {
+	criterio="";
 	capa_parcelas.remove();
-	if (Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
-	if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
-	if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
-	if (lugar !==""){lugar.remove()};
 	var cadenabusqueda=cobertura_vid.value;
 	var criterio = new RegExp(cadenabusqueda, "gi");
 	if (cobertura_vid.value !="") {if (feature.properties.Variedad==cobertura_vid.value) return true; document.getElementById("resumen").innerText=("Datos Estadísticos\nCriterio de filtro: Vid\nVariedad "+cobertura_vid.value+"\nCantidad de parcelas: "+tot_parc+"\nSuperficie: "+sup_total.toFixed(2)+" ha"+"\nPromedio producción anual: "+(prom_prod/anios_prod/sup_total).toFixed(2)+" qq/ha")};
@@ -631,17 +636,13 @@ function Filtrar_Vid(feature) {
 <!--Funcion para filtrado general-->	
 function Filtrar_Gral(feature) {
 	capa_parcelas.remove();
-	if (Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
-	if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
-	if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
-	if (lugar !==""){lugar.remove()};
-	if (sel_clon.value !=""){if (feature.properties.Clon==sel_clon.value) return true; resumen=otro_criterio.value+" "+sel_clon.value};
-	if (sel_cobertura.value !=""){if (feature.properties.Cobertura==sel_cobertura.value) return true; resumen=otro_criterio.value+" "+sel_cobertura.value};
-	if (sel_conduccion.value !=""){if (feature.properties.Conduccion==sel_conduccion.value) return true; resumen=otro_criterio.value+" "+sel_conduccion.value};
-	if (sel_especie.value !=""){if (feature.properties.Especie==sel_especie.value) return true; resumen=otro_criterio.value+" "+sel_especie.value};
-	if (sel_responsable.value !=""){if (feature.properties.Responsabl==sel_responsable.value) return true; resumen=otro_criterio.value+" "+sel_responsable.value};
-	if (sel_riego.value !=""){if (feature.properties.Riego==sel_riego.value) return true; resumen=otro_criterio.value+" "+sel_riego.value};
-	if (sel_plantacion.value !=""){
+	if (criterio=="Clon" && sel_clon.value !=""){if (feature.properties.Clon==sel_clon.value) return true; resumen=otro_criterio.value+" "+sel_clon.value};
+	if (criterio=="Cobertura" && sel_cobertura.value !=""){if (feature.properties.Cobertura==sel_cobertura.value) return true; resumen=otro_criterio.value+" "+sel_cobertura.value};
+	if (criterio=="Conduccion" && sel_conduccion.value !=""){if (feature.properties.Conduccion==sel_conduccion.value) return true; resumen=otro_criterio.value+" "+sel_conduccion.value};
+	if (criterio=="Especie" && sel_especie.value !=""){if (feature.properties.Especie==sel_especie.value) return true; resumen=otro_criterio.value+" "+sel_especie.value};
+	if (criterio=="Responsable" && sel_responsable.value !=""){if (feature.properties.Responsabl==sel_responsable.value) return true; resumen=otro_criterio.value+" "+sel_responsable.value};
+	if (criterio=="Riego" && sel_riego.value !=""){if (feature.properties.Riego==sel_riego.value) return true; resumen=otro_criterio.value+" "+sel_riego.value};
+	if (criterio=="Plantacion" && sel_plantacion.value !=""){
 		if (sel_plantacion.value=="Antes de 1990") {if (feature.properties.Plantacion<'1991' && feature.properties.Plantacion !=null) return true};
 		if (sel_plantacion.value=="Entre 1991 y 2000") {
 			base='1991'; tope='2000';
@@ -654,7 +655,7 @@ function Filtrar_Gral(feature) {
 			if (feature.properties.Plantacion>=base && feature.properties.Plantacion<=tope && feature.properties.Plantacion !=null) return true};
 		resumen=otro_criterio.value+": "+sel_plantacion.value;
 	};
-	if (sel_superficie.value !=""){
+	if (criterio=="Superficie" && sel_superficie.value !=""){
 		if (sel_superficie.value=="Menos de 0,1 ha") {if (feature.properties.Sup_Croqui <'0.1' && feature.properties.Sup_Croqui !=null) return true};
 		if (sel_superficie.value=="Entre 0,1 y 0,2 ha") {
 			base='0.1';tope='0.2';
@@ -684,6 +685,7 @@ function Filtrar_Gral(feature) {
 
 <!--Funcion para buscar sector/actividad-->
 function Filtrar_Buscar(feature) {
+	criterio="";
 	if (feature.properties.Descripcio==encontrar_a.value) {return true,coincidencia="sector",sector=feature.properties.Descripcio};
 	if (feature.properties.Actividad==encontrar_a.value || feature.properties.Actividad1==encontrar_a.value || feature.properties.Actividad2==encontrar_a.value
 	|| feature.properties.Actividad3==encontrar_a.value) {return true,sector=feature.properties.Descripcio,coincidencia="actividad"};
