--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
    <script src="geojson/personal.geojson" type="text/javascript"></script>
    
 	<!--Icono para la pestaña del navegador-->
-	 <link rel="shortcut icon" href="./image/icono.ico" type="image/x-icon"/>
+	 <link rel="shortcut icon" href="./image/inta.ico" type="image/x-icon"/>
 	 
 <!--Clases para personalizar algunos elementos-->
 <meta name="theme-color" content="#712cf9">
@@ -141,7 +141,12 @@
 
 <!--Barra con el título y logo-->
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+	<!--Deshabilitar en versión pública-->
 	<a style="font-size:15px; color:white">VISOR DE PARCELAS CON CULTIVOS Y CONSTRUCCIONES DE LA EEA INTA MENDOZA</a>
+	<!--Deshabilitar hasta aquí-->
+	<!--Habilitar para versión pública-->
+	<!--<a style="font-size:15px; color:white">LOCALIZADOR DE PERSONAS, ESPECIALIDADES Y SERVICIOS DE LA EEA INTA MENDOZA</a>-->
+	<!--Habilitar hasta aquí-->
 	<select id="encontrar_a" name="encontraralgo" data-placeholder="¿Necesitás ubicar una persona o un lugar?. Buscalo acá..." class="form-control chosenbusqueda" value="<%= typeof Casas != 'undefined' ? Casas : '' %>" onchange="EncontrarA(value)">
 		<option value=""></option>
 	</select>
@@ -155,6 +160,7 @@
 		<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
 			<div id="barrabotones" class="position-sticky pt-3 sidebar-sticky"">
 				<p></p>
+				<!--Deshabilitar en versión pública-->
 				<p style="font-size:12px; color:blue">¿Necesitás filtrar por variedad de vid?. Hacelo desde aquí...</p>
 				<div id="opciones_cob" style="font-size:12px">
 					<select id="cobertura_vid" onchange="CoberturasAbuscar(value)">
@@ -281,6 +287,17 @@
 				</div>
 				<button id="mostrartodo" type="button" style="background-color:green" onclick="MostrarTodo()">Mostrar todas las parcelas</button>
 				<p><br></p>
+				<!--Deshabilitar hasta aquí-->
+				<p style="font-size: 12px; color:blue">Unidades dependientes</p><p></p>
+				<select style="font-size: 12px" id="agencias" onchange="IrAERs(value)">
+					<option value="" ></option>
+					<option value="Guaymallen">Agencia Extensión Guaymallén</option>
+					<option value="Lavalle">Agencia Extensión Lavalle</option>
+					<option value="Lujan">Agencia Extensión Luján de Cuyo</option>
+					<option value="Maipu">Agencia Extensión Maipú</option>
+					<option value="Uspallata">Oficina Información Técnica Uspallata</option>
+				</select>
+				<button id="volvereea" type="button" style="background-color:red" onclick="VolverEEA()">Volver al predio de la EEA Mendoza</button>
 				<button id="quitartodo" type="button" style="background-color:red" onclick="ResetearTodo()">Quitar todas las parcelas del mapa</button>
 				<div id="contenedor_resumen" style="background-color:gray">
 					<label id="resumen" style="font-size:12px"><br></label>
@@ -289,11 +306,11 @@
 				<p style="font-size:12px">1ª) Desactivá las capas que pudieran haber en la zona a medir [Botón Rojo Superior]</p>
 				<a style="font-size:12px; color:blue" href="javascript:Medir_Longitud()">2ª) Hacé click AQUI</a>
 				<p style="font-size:12px">3ª) Hacé un click en cada uno de los dos puntos a medir...Y LISTO...!!!</p>
+				<!--Deshabilitar para versión pública-->
 				<p><img src="image/cultivos.jpg" width="20" height="20">Parcelas con cultivos</img></p>
 				<p><img src="image/construcciones.jpg" width="20" height="20">Parcelas con construcciones</img></p>
-				<!--<a style="font-size:12px; color:blue" href="mailto:cmauriciogodoy@gmail.com?subject=Asunto del correo&body=Cuerpo del mensaje">Hacer un aporte o reportar un error</a> <!--onclick="CopiarAlPortapapeles(); CopiarAlPortapapeles1()"-->
-				<a style="font-size:12px; color:blue" onclick="CopiarAlPortapapeles(); CopiarAlPortapapeles1()">Hacer un aporte o reportar un error</a>
-			</div>
+				<!--Deshabilitar hasta aquí-->
+				<a style="font-size:12px; color:blue" onclick="CopiarAlPortapapeles(); CopiarAlPortapapeles1()">Hacer un aporte o reportar un error</a>			</div>
 		</nav>
 
 		<!--Dimensionar el tamaño de la pantalla que ocupará el mapa -->
@@ -396,6 +413,11 @@ var lugar="";
 var ubicacion_real="";
 var borrar_ubicacion_real="";
 var sondeo_posicion="";
+var aer="";
+var version="completa";
+<!--Habilitar para versión pública-->
+<!--var version="publica";-->
+<!--Habilitar hasta aquí-->
 
 <!--Funcion para colorear el fondo según el tipo de coberura (cultivos/edificios)-->
 function ColorFondo(d) {
@@ -713,8 +735,10 @@ function EncontrarA(encontrar) {
 	sector="";
 	oficina="";
 	<!--Borrar las búsquedas anteriores-->
+	if (version=="completa") {
 	if (Object.keys(capa_parcelas).length !==0) {capa_parcelas.remove()};
 	if (Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
+	};
 	if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
 	if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
 	if (lugar !==""){lugar.remove()};
@@ -734,55 +758,66 @@ function EncontrarA(encontrar) {
 
 <!--Funcion para resetear todo-->
 function ResetearTodo() {
-	capa_parcelas.remove();
-	if (Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
-	if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
-	if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
-	if (lugar !==""){lugar.remove()};
-	if (otro_criterio.value=="Responsable") {
-		document.getElementById("responsable").style.display="none";
-		document.getElementById("sel_responsable").style.display="none"}
-	if (otro_criterio.value=="Clon") {
-		document.getElementById("clon").style.display="none";
-		document.getElementById("sel_clon").style.display="none";}
-	if (otro_criterio.value=="Superficie") {
-		document.getElementById("superficie").style.display="none";
-		document.getElementById("sel_superficie").style.display="none";}
-	if (otro_criterio.value=="Riego") {
-		document.getElementById("riego").style.display="none";
-		document.getElementById("sel_riego").style.display="none";}
-	if (otro_criterio.value=="Plantacion") {
-		document.getElementById("plantacion").style.display="none";
-		document.getElementById("sel_plantacion").style.display="none";}
-	if (otro_criterio.value=="Conduccion") {
-		document.getElementById("conduccion").style.display="none";
-		document.getElementById("sel_conduccion").style.display="none";}
-	if (otro_criterio.value=="Cobertura") {
-		document.getElementById("cobertura").style.display="none";
-		document.getElementById("sel_cobertura").style.display="none";}
-	if (otro_criterio.value=="Especie") {
-		document.getElementById("especie").style.display="none";
-		document.getElementById("sel_especie").style.display="none";}
-	tot_parc=0;
-	sup_total=0;
-	prom_prod=0;
-	anios_prod=0;
-	criterio="";
-	otro_criterio.value="";
-	sel_clon.value="";
-	sel_responsable.value="";
-	sel_especie.value="";
-	sel_cobertura.value="";
-	sel_plantacion.value="";
-	sel_riego.value="";
-	sel_superficie.value="";
-	sel_conduccion.value="";
-	cobertura_vid.value="";
-	encontrar_a.value="";
-	document.getElementById("resumen").innerText=("");
-	document.getElementById("quitartodo").style.display="none";
-	document.getElementById("mostrartodo").style.display="inline";
-	mapa.flyTo(coordenadas, zum);
+	document.getElementById("volvereea").style.display = "none";
+	if (version=="completa") {
+		if (Object.keys(capa_parcelas).length !==0) {capa_parcelas.remove()};
+		if (Object.keys(capa_filtrada).length !== 0) {capa_filtrada.remove()};
+		if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
+		if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
+		if (lugar !==""){lugar.remove()};
+		if (aer !==""){aer.remove()};
+		if (otro_criterio.value=="Responsable") {
+			document.getElementById("responsable").style.display="none";
+			document.getElementById("sel_responsable").style.display="none"}
+		if (otro_criterio.value=="Clon") {
+			document.getElementById("clon").style.display="none";
+			document.getElementById("sel_clon").style.display="none";}
+		if (otro_criterio.value=="Superficie") {
+			document.getElementById("superficie").style.display="none";
+			document.getElementById("sel_superficie").style.display="none";}
+		if (otro_criterio.value=="Riego") {
+			document.getElementById("riego").style.display="none";
+			document.getElementById("sel_riego").style.display="none";}
+		if (otro_criterio.value=="Plantacion") {
+			document.getElementById("plantacion").style.display="none";
+			document.getElementById("sel_plantacion").style.display="none";}
+		if (otro_criterio.value=="Conduccion") {
+			document.getElementById("conduccion").style.display="none";
+			document.getElementById("sel_conduccion").style.display="none";}
+		if (otro_criterio.value=="Cobertura") {
+			document.getElementById("cobertura").style.display="none";
+			document.getElementById("sel_cobertura").style.display="none";}
+		if (otro_criterio.value=="Especie") {
+			document.getElementById("especie").style.display="none";
+			document.getElementById("sel_especie").style.display="none";}
+		tot_parc=0;
+		sup_total=0;
+		prom_prod=0;
+		anios_prod=0;
+		criterio="";
+		otro_criterio.value="";
+		sel_clon.value="";
+		sel_responsable.value="";
+		sel_especie.value="";
+		sel_cobertura.value="";
+		sel_plantacion.value="";
+		sel_riego.value="";
+		sel_superficie.value="";
+		sel_conduccion.value="";
+		cobertura_vid.value="";
+		encontrar_a.value="";
+		document.getElementById("resumen").innerText=("");
+		document.getElementById("quitartodo").style.display="none";
+		document.getElementById("mostrartodo").style.display="inline";
+		mapa.flyTo(coordenadas, zum);
+	};
+	if (version=="publica") {
+		if (Object.keys(capa_buscar).length !==0) {capa_buscar.remove()};
+		if (Object.keys(capa_buscar1).length !==0) {capa_buscar1.remove()};
+		if (lugar !==""){lugar.remove()};
+		if (aer !==""){aer.remove()};
+		mapa.flyTo(coordenadas, zum);
+	};
 };
 
 <!-- Funcion para mostrar todas las parcelas-->
@@ -1002,6 +1037,77 @@ function CopiarAlPortapapeles1 () {
 	document.body.removeChild(a);
 };
 
+function IrAERs(agencia) {
+	if (aer !="") {aer.remove()};
+	if (agencia=="Guaymallen") {
+		var formatoPopup = {
+			'maxWidth': '400',
+			'className' : 'popups'};
+		let coord="-32.88053993173516, -68.77169734266394".split(",");
+		mapa.flyTo(coord, 18);
+		let contenidoPopup="<b><h4>Agencia de Extensión Guaymallén"+"</h4></b><br/><u>Dirección</u>: Mathus Hoyos s/n, Bermejo, Guaymallén."+"<br/>Predio de la Escuela Técnica Miguel Amado Pouget"+"<br/><u>Teléfono</u>: 11-6562-6368."+"<br/><u>Mail</u>: bakos.pedro@inta.gob.ar";
+		aer=L.marker(coord).addTo(mapa)
+			.bindPopup(contenidoPopup, formatoPopup)
+			.openPopup();
+		document.getElementById("volvereea").style.display = "inline";
+	};
+	if (agencia=="Lavalle") {
+		var formatoPopup = {
+			'maxWidth': '400',
+			'className' : 'popups'};
+		let coord="-32.72140116246021, -68.59081481151209".split(",");
+		mapa.flyTo(coord, 18);
+		let contenidoPopup="<b><h4>Agencia de Extensión Lavalle"+"</h4></b><br/><u>Dirección</u>: Belgrano y Las Heras, Lavalle."+"<br/><u>Teléfono</u>: 11-6864-5337."+"<br/><u>Mail</u>: valentin.mariana@inta.gob.ar";
+		aer=L.marker(coord).addTo(mapa)
+			.bindPopup(contenidoPopup, formatoPopup)
+			.openPopup();
+		document.getElementById("volvereea").style.display = "inline";
+	};
+	if (agencia=="Lujan") {
+		var formatoPopup = {
+			'maxWidth': '400',
+			'className' : 'popups'};
+		let coord="-33.004316166957665, -68.86629766891129".split(",");
+		mapa.flyTo(coord, 18);
+		let contenidoPopup="<b><h4>Agencia de Extensión Luján de Cuyo"+"</h4></b><br/><u>Dirección</u>: San Martín 3853, Mayor Drummond, Luján de Cuyo."+"<br/><u>Teléfono</u>: 11-6056-6027."+"<br/><u>Mail</u>: espindola.rodrigo@inta.gob.ar";
+		aer=L.marker(coord).addTo(mapa)
+			.bindPopup(contenidoPopup, formatoPopup)
+			.openPopup();
+		document.getElementById("volvereea").style.display = "inline";
+	};
+	if (agencia=="Maipu") {
+		var formatoPopup = {
+			'maxWidth': '400',
+			'className' : 'popups'};
+		let coord="-32.98581159851684, -68.78770732344232".split(",");
+		mapa.flyTo(coord, 18);
+		let contenidoPopup="<b><h4>Agencia de Extensión Maipú"+"</h4></b><br/><u>Dirección</u>: Pablo Pescara 79, Maipú."+"<br/><u>Teléfono</u>: 11-6864-3738."+"<br/><u>Mail</u>: villar.elisa@inta.gob.ar";
+		aer=L.marker(coord).addTo(mapa)
+			.bindPopup(contenidoPopup, formatoPopup)
+			.openPopup();
+		document.getElementById("volvereea").style.display = "inline";
+	};
+	if (agencia=="Uspallata") {
+		var formatoPopup = {
+			'maxWidth': '400',
+			'className' : 'popups'};
+		let coord="-32.59050058989425, -69.34690529948934".split(",");
+		mapa.flyTo(coord, 18);
+		let contenidoPopup="<b><h4>Oficina de Información Técnica Uspallata"+"</h4></b><br/><u>Dirección</u>: Rutas 7 y 52, Uspallata."+"<br/>Terminal de Omnibus de Uspallata."+"<br/><u>Teléfono</u>: 2954-398215."+"<br/><u>Mail</u>: lang.maria@inta.gob.ar";
+		aer=L.marker(coord).addTo(mapa)
+			.bindPopup(contenidoPopup, formatoPopup)
+			.openPopup();
+		document.getElementById("volvereea").style.display = "inline";
+	};
+};
+
+function VolverEEA () {
+	if (aer !="") {aer.remove()};
+	let coord="-33.00598405638592, -68.85600484779212".split(",");
+	document.getElementById("volvereea").style.display = "none";
+	mapa.flyTo(coord,16);
+};
+
 CargarListbox();
 
 <!--Captura de eventos de ventana modal de estadisticas-->
@@ -1011,6 +1117,8 @@ btncerrarmodalestadisticas.addEventListener("click",()=>{modalestadisticas.close
 
 <!-- Control de la escala que se irá actualizando conforme se haga zoom -->
 new L.control.scale({imperial:false}).addTo(mapa);
+<!--Deshabilitar versión pública-->
+if (version=="completa") {
 document.getElementById("responsable").style.display = "none";
 document.getElementById("clon").style.display = "none";
 document.getElementById("superficie").style.display = "none";
@@ -1020,9 +1128,12 @@ document.getElementById("plantacion").style.display = "none";
 document.getElementById("conduccion").style.display = "none";
 document.getElementById("especie").style.display = "none";
 document.getElementById("mostrartodo").style.display = "none";
-document.getElementById("quitartodo").style.display = "inline";
-VerificarConexion();
 capa_parcelas=L.geoJson(parcelas,{style: PersonalizarPerimetro, onEachFeature}).addTo(mapa);
+};
+document.getElementById("quitartodo").style.display = "inline";
+document.getElementById("quitartodo").style.display = "none";
+document.getElementById("volvereea").style.display = "none";
+VerificarConexion();
 if (conexion=="no") {
 	document.getElementById("Conectividad").style.display="inline";
 } else {
